# rime-custom-plugins

./: CMakeLists.txt  README.md
src/: custom_module.cc  custom_plugins_module.cc  userdb_sync_delete.cc  userdb_sync_delete.hpp  wanxiang_module.cc
src/lib/: detached_thread_manager.hpp
